# etsi-its-parser

./: .gitmodules  CMakeLists.txt  Readme.md  indicator.cpp  indicator.h  main.cpp  message_id.h  vcpkg.json
src/: asn1json.cpp  build_json.cpp  build_json.h  headers.h  indicator.cpp  indicator.h  main.cpp  message_id.h
